# os

./: .cursorcontext.json  .cursorrules  .gitignore  .windsurfrules  Cargo.toml  Focus.md  LICENSE  Makefile  OS_Development_Plan.md  README.md  link.ld  roadmap.txt  x86_64-rust-os.json
boot/uefi/: Cargo.toml
boot/uefi/.cargo/: config.toml
boot/uefi/src/: main.rs
kernel/: Cargo.toml  build.rs  linker.ld
kernel/.cargo/: config.toml
kernel/src/: arch.rs  boot.asm  main.rs  memory.rs
src/: boot.asm  kernel.c  lib.rs
src/cpu/: gdt.c  gdt_asm.asm  idt.c  idt_asm.asm  irq_asm.asm  isr.c  pic.c  tss.c  tss_asm.asm
src/drivers/: pit.c  vga.c  vga.h
src/include/: gdt.h  heap.h  idt.h  isr.h  mm.h  multiboot.h  pic.h  pit.h  rust_timer.h  stdbool.h  stddef.h  stdint.h  string.h  tss.h  vga.h  vmm.h
src/lib/: string.c
src/mm/: heap.c  paging.asm  pmm.c  vmm.c
src/rust/: Cargo.toml  i686-unknown-none.json
src/rust/src/: lib.rs
src/rust/src/lib/: timer.rs
tools/qemu/: run.sh
