[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"
authors = ["r33k1d"]
description = "A 64-bit operating system written in Rust, C++, C, and Assembly"

[workspace]
members = [
    "boot/uefi",
    "kernel",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
