[package]
name = "os-rust-components"
version = "0.1.0"
edition = "2021"

[lib]
name = "os_rust_components"
path = "src/lib/timer.rs"
crate-type = ["staticlib"]

[dependencies]
spin = "0.9"
volatile = "0.4"
bitflags = "2.4"

[profile.dev]
panic = "abort"
opt-level = 2

[profile.release]
panic = "abort"
opt-level = 2
debug = false
lto = true

[build]
target = "i686-unknown-none.json" 